--- a/css/index.css
+++ b/css/index.css
@@ -66,9 +66,10 @@ html{
     font-size: medium;
 }
 .btnPovezi {
-    height: 20px !important;
+    height: 25px !important;
     margin: 2px !important;
     padding: 1px !important;
+    text-align: center;
     position: absolute;
     right: 0px;
     font-weight: lighter;
