--- a/css/index.css
+++ b/css/index.css
@@ -15,12 +15,15 @@ html{
     text-size-adjust: 100%;
     box-sizing: border-box;
 }
-.con{
+.con-app{
     padding: 1rem;
 }
-/*h1, h2, p, div{
-    padding: 1rem 2rem;
-}*/
+.con{
+    padding: 1rem;
+    display: flex;
+    gap: 10px;
+    font-size: 16px;
+}
 #box{
     border: 1px solid #999;
 }
@@ -130,10 +133,10 @@ i {
 }
 
 .helper {
-    font-size: 13px;
     padding: 2%;
     background-color: rgb(230,230,230);
     border-radius: 10px;
+    /* display: flex; */
 }
 .helperSadrzaj {
     display: flex;
@@ -163,18 +166,81 @@ table {
     left: 0;
     background: rgba(0, 0, 0, 0.8);
     z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .confirm-box {
     position: absolute;
-    width: 50%;
-    height: 40%;
-    top: 25%;
-    left: 25%;
+    width: 650px;
+    height: 300px;
     text-align: center;
     background: white;
+    padding: 10px;
+}
+#confirm-box-smaller {
+    height: 200px;
 }
 
 .close {
-cursor: pointer;
+    cursor: pointer;
+}
+
+#navigacija li {
+    padding: 5px;
+    cursor: pointer;
+    list-style-type: none;
+    width: 200px;
+}
+
+.main-navbar {
+    font-size: 24px;
+    background-color: #333;
+}
+.main-navbar-left {
+    display: flex;
+    gap: 5%;
+}
+.main-navbar-left a {
+    text-align: center;
+    color: #999;
+    cursor: pointer;
+    text-decoration: none;
+}
+.main-navbar-left li {
+    height: 80px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.main-navbar-left a:hover{
+    color: white;
+    text-decoration: none;
+}
+.open-link {
+    color: white !important;
+}
+.open-item {
+    border-bottom: 6px solid red;
+    border-top: 6px solid #333;
+}
+
+#slobodnoKoriscenje {
+    color: #B68181;
+    text-decoration: underline;
+}
+#serverStop {
+    display: none;
+    color: white;
+    width: 500px;
+    height: 30px;
+    font-size: 16px;
+    background-color: #B68181;
+    text-align: center;
+}
+
+#laksi-item, #tezi-item {
+    width: 200px;
 }
